--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,10 +7,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;;
+  background-color: #F7F9FA;
 }
